--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "chat"
+name = "websocket"
 version = "0.1.0"
 authors = ["exfly <exflyg@gmail.com>"]
 edition = "2018"
@@ -12,4 +12,3 @@ http-muncher = "0.2.1"
 sha1 = "0.1.1"
 rustc-serialize = "0.3.15"
 byteorder = "0.3.*"
-
